force-app/main/default/objects/StandardProductInventoryMatrix__c/StandardProductInventoryMatrix__c.object-meta.xml
<CustomObject>
    <label>Standard Product Inventory Matrix</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Product Inventory Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>