force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/customLength__c.field-meta.xml
<CustomField>
    <fullName>customLength__c</fullName>
    <label>Length</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>