force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/customWidth__c.field-meta.xml
<CustomField>
    <fullName>customWidth__c</fullName>
    <label>Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>