force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/EstimatedCrateSheetCount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCrateSheetCount__c</fullName>
    <label>Estimated Crate Sheet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>