force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>