force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/isBlue__c.field-meta.xml
<CustomField>
    <fullName>isBlue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue</label>
    <type>Checkbox</type>
</CustomField>