force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/isConcore__c.field-meta.xml
<CustomField>
    <fullName>isConcore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concore</label>
    <type>Checkbox</type>
</CustomField>