force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/length__c.field-meta.xml
<CustomField>
    <fullName>length__c</fullName>
    <label>xLength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>576</fullName>
            </value>
            <value>
                <fullName>581</fullName>
            </value>
            <value>
                <fullName>585</fullName>
            </value>
            <value>
                <fullName>602</fullName>
            </value>
            <value>
                <fullName>607</fullName>
            </value>
            <value>
                <fullName>611</fullName>
            </value>
            <value>
                <fullName>632</fullName>
            </value>
            <value>
                <fullName>633</fullName>
            </value>
            <value>
                <fullName>634</fullName>
            </value>
            <value>
                <fullName>637</fullName>
            </value>
            <value>
                <fullName>639</fullName>
            </value>
            <value>
                <fullName>641</fullName>
            </value>
            <value>
                <fullName>642</fullName>
            </value>
            <value>
                <fullName>650</fullName>
            </value>
            <value>
                <fullName>1010</fullName>
            </value>
            <value>
                <fullName>1110</fullName>
            </value>
            <value>
                <fullName>1130</fullName>
            </value>
            <value>
                <fullName>1160</fullName>
            </value>
            <value>
                <fullName>1230</fullName>
            </value>
            <value>
                <fullName>1250</fullName>
            </value>
            <value>
                <fullName>1258</fullName>
            </value>
            <value>
                <fullName>1278</fullName>
            </value>
            <value>
                <fullName>1328</fullName>
            </value>
            <value>
                <fullName>1330</fullName>
            </value>
            <value>
                <fullName>1422</fullName>
            </value>
            <value>
                <fullName>1460</fullName>
            </value>
            <value>
                <fullName>1494</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>1540</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>