force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/moqUnits__c.field-meta.xml
<CustomField>
    <fullName>moqUnits__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Sq Ft</fullName>
                <isActive>false</isActive>
                <label>Sq Ft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>