force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/productLine__c.field-meta.xml
<CustomField>
    <fullName>productLine__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw Glass</fullName>
                <default>true</default>
                <label>Raw Glass</label>
            </value>
            <value>
                <fullName>Concore</fullName>
                <isActive>false</isActive>
                <label>Concore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>