force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/shippingCostPerSqFt__c.field-meta.xml
<CustomField>
    <fullName>shippingCostPerSqFt__c</fullName>
    <formula>CASE(thickness__c, 
&quot;0.40&quot;,0.03,
&quot;0.405&quot;,0.03,
&quot;0.50&quot;,0.03,
&quot;0.505&quot;,0.03,
&quot;0.55&quot;,0.03,
&quot;0.60&quot;,0.03,
&quot;0.605&quot;,0.03,
&quot;0.70&quot;,0.03,
&quot;0.75&quot;,0.03,
&quot;0.80&quot;,0.03,
&quot;0.85&quot;,0.03,
&quot;0.89&quot;,0.03,
&quot;0.90&quot;,0.05,
&quot;0.95&quot;,0.05,
&quot;1.00&quot;,0.05,
&quot;1.10&quot;,0.07,
&quot;1.20&quot;,0.07,
&quot;1.30&quot;,0.07,
&quot;1.40&quot;,0.08,
&quot;1.50&quot;,0.08,
&quot;1.60&quot;,0.08,
&quot;1.70&quot;,0.10,
&quot;1.80&quot;,0.10,
&quot;1.90&quot;,0.10,
&quot;2.00&quot;,0.10,
&quot;2.30&quot;,0.10,
&quot;2.50&quot;,0.10,
&quot;2.55&quot;,0.10,
&quot;2.70&quot;,0.10,
&quot;2.85&quot;,0.10,
&quot;3.00&quot;,0.10,
&quot;3.30&quot;,0.10,
&quot;3.50&quot;,0.10,
&quot;4.25&quot;,0.10,
0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Cost per SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>