force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/thickness__c.field-meta.xml
<CustomField>
    <fullName>thickness__c</fullName>
    <label>Thickness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>.95</fullName>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.33</fullName>
            </value>
            <value>
                <fullName>0.40</fullName>
            </value>
            <value>
                <fullName>0.405</fullName>
            </value>
            <value>
                <fullName>0.50</fullName>
            </value>
            <value>
                <fullName>0.505</fullName>
            </value>
            <value>
                <fullName>0.55</fullName>
            </value>
            <value>
                <fullName>0.555</fullName>
            </value>
            <value>
                <fullName>0.60</fullName>
            </value>
            <value>
                <fullName>0.605</fullName>
            </value>
            <value>
                <fullName>0.65</fullName>
            </value>
            <value>
                <fullName>0.70</fullName>
            </value>
            <value>
                <fullName>0.80</fullName>
            </value>
            <value>
                <fullName>0.81</fullName>
            </value>
            <value>
                <fullName>0.89</fullName>
            </value>
            <value>
                <fullName>0.90</fullName>
            </value>
            <value>
                <fullName>0.95</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>1.05</fullName>
            </value>
            <value>
                <fullName>1.10</fullName>
            </value>
            <value>
                <fullName>1.20</fullName>
            </value>
            <value>
                <fullName>1.30</fullName>
            </value>
            <value>
                <fullName>1.35</fullName>
            </value>
            <value>
                <fullName>1.40</fullName>
            </value>
            <value>
                <fullName>1.50</fullName>
            </value>
            <value>
                <fullName>1.60</fullName>
            </value>
            <value>
                <fullName>1.62</fullName>
            </value>
            <value>
                <fullName>1.70</fullName>
            </value>
            <value>
                <fullName>1.76</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>