force-app/main/default/objects/StandardProductInventoryMatrix__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>xWidth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>217</fullName>
            </value>
            <value>
                <fullName>225</fullName>
            </value>
            <value>
                <fullName>229</fullName>
            </value>
            <value>
                <fullName>237</fullName>
            </value>
            <value>
                <fullName>245</fullName>
            </value>
            <value>
                <fullName>248</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>265</fullName>
            </value>
            <value>
                <fullName>276</fullName>
            </value>
            <value>
                <fullName>279</fullName>
            </value>
            <value>
                <fullName>280</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>650</fullName>
            </value>
            <value>
                <fullName>1094</fullName>
            </value>
            <value>
                <fullName>1164</fullName>
            </value>
            <value>
                <fullName>1166</fullName>
            </value>
            <value>
                <fullName>1230</fullName>
            </value>
            <value>
                <fullName>1241</fullName>
            </value>
            <value>
                <fullName>1274</fullName>
            </value>
            <value>
                <fullName>1300</fullName>
            </value>
            <value>
                <fullName>1330</fullName>
            </value>
            <value>
                <fullName>1340</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
            <value>
                <fullName>1427</fullName>
            </value>
            <value>
                <fullName>1445</fullName>
            </value>
            <value>
                <fullName>1450</fullName>
            </value>
            <value>
                <fullName>1478</fullName>
            </value>
            <value>
                <fullName>1490</fullName>
            </value>
            <value>
                <fullName>1514</fullName>
            </value>
            <value>
                <fullName>1518</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>